# ResumeAnalyser

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  vignette.ipynb
src/resumeanalyser/: metrics.py  plotting.py  text_cleaning.py  text_reading.py
tests/: test_metrics.py  test_plotting.py  test_resumeanalyser.py  test_text_cleaning.py  test_text_reading.py
tests/data/: fancy_text_docx.docx  simple_text.docx  software_engineer_job_description.docx  ~$ncy_text_docx.docx
